ch04/ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
  namespace: snackbar
  labels:
    service: home
    project: snackbar
spec:
  replicas: 2
  selector:
    matchLabels:
      service: home
      project: snackbar
  template:
    metadata:
      labels:
        service: home
        project: snackbar
    spec:
      containers:
      - name: home
        image: yoonjeong/home:1.0
        containerPort: 8080
        resources:
          limits:
            memory: "64Mi"
            cpu: "50m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: snackbar
  labels:
    service: order
    project: snackbar
spec:
  replicas: 2
  selector:
    service: order
    project: snackbar
  template:
    metadata:
      service: order
      project: snackbar
    spec:
      containers:
      - name: order
        image: yoonjeong/order:1.0
        containerPort: 8080
        resources:
          limits:
            memory: "64Mi"
            cpu: "50m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: snackbar
  labels:
    service: payment
    project: snackbar
spec:
  replicas: 2
  selector:
    matchLabels:
      service: payment
      project: snackbar
  template:
    metadata:
      labels:
        service: payment
        project: snackbar
    spec:
      containers:
      - name: payment
        image: yoonjeong/payment:1.0
        containerPort: 8080
        resources:
          limits:
            memory: "64Mi"
            cpu: "50m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery
  namespace: snackbar
  labels:
    service: delivery
    project: snackbar
spec:
  replicas: 2
  selector:
    matchLabels:
      service: delivery
      project: snackbar
  template:
    metadata:
      labels:
        service: delivery
        project: snackbar
    spec:
      containers:
      - name: delivery
        image: yoonjeong/delivery:1.0
        containerPort: 8080
        resources:
          limits:
            memory: "64Mi"
            cpu: "50m"
