ch04/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home
  namespace: snackbar
  labels:
    service: home
    project: snackbar
spec:
  type: NodePort
  selector:
    service: home
    project: snackbar
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: snackbar
  labels:
    service: order
    project: snackbar
spec:
  type: NodePort
  selector:
    service: order
    project: snackbar
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: snackbar
  labels:
    service: payment
    project: snackbar
spec:
  type: NodePort
  selector:
    service: payment
    project: snackbar
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: delivery
  namespace: snackbar
  labels:
    service: delivery
    project: snackbar
spec:
  type: NodePort
  selector:
    service: delivery
    project: snackbar
  ports:
  - port: 80
    targetPort: 8080
