ch04/ingress/ingress-single-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snackbar
  namespace: snackbar
  labels:
    project: snackbar
spec:
  defaultBackend:
    service:
      name: home
      port:
        number: 80
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /order
        backend:
          service:
            name: order
            port:
              number: 80
      - pathType: Prefix
        path: /payment
        backend:
          service:
            name: payment
            port:
              number: 80
